# zad4-ArturZiolkowski1999

./: .gitignore  CMakeLists.txt  README.md
data/: data.txt  data1.txt  data2.txt  data3.txt
doc/html/: _constants_8h_source.html  _cuboid_8h_source.html  _matrix3x3_8h_source.html  _matrix4x4_8h_source.html  _matrix_8h_source.html  _vector_8h_source.html  annotated.html  class_cuboid-members.html  class_cuboid.html  class_dummy.html  class_matrix-members.html  class_matrix.html  class_matrix3x3-members.html  class_matrix3x3.html  class_matrix4x4-members.html  class_matrix4x4.html  class_vector-members.html  class_vector.html  classes.html  classscene-members.html  classscene.html  dir_d44c64559bbebec7f509842c48db8b23.html  example_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  scene_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
doc/latex/: annotated.tex  class_cuboid.tex  class_dummy.tex  class_matrix.tex  class_matrix3x3.tex  class_matrix4x4.tex  class_vector.tex  classscene.tex  hierarchy.tex  index.tex  refman.tex
inc/: Cuboid.h  Matrix.h  Vector.h  scene.h
src/: Matrix3x3.cpp  main.cpp  scene.cpp
tst/: Formula-test.cpp
